fix (style): adjust tabs' height to avoid weird layout issue

--- a/src/app/authentication/components/login/login.component.scss
+++ b/src/app/authentication/components/login/login.component.scss
@@ -1,6 +1,7 @@
 .login-form {
   max-width: 300px;
   min-width: 300px;
+  min-height: 17.5rem;
 }
 
 .login-form-margin {
